--- a/js/index.html
+++ b/js/index.html
@@ -24,21 +24,16 @@
 		<script type="text/javascript">
 			document.getElementById("foo").onclick = function(){
 				
-				var c = document.body.childNodes;
+	/*			var c = document.getElementById("r").attributes;
 				var txt="";
-				for(var i=0;i<document.body.childNodes.length;i++)
+				for(var i=0;i<c.length;i++)
 				{
-					txt = txt + document.body.
-				}
-				document.getElementById("p").innerHTML= txt;
-			}
+					txt = txt + c[i].name + "<br>" 
+				}*/
+//				document.getElementById("p").innerHTML= txt;
+	var v = {firstName:"John", lastName:"Doe"};
+
+	alert(v.firstName);			}
 		</script>
-
-
-
-
-
-
-
 	</body>
 </html>
