--- a/js/login.html
+++ b/js/login.html
@@ -30,9 +30,14 @@
 	  	   	  </div>
 	   	  </div>
 	   </div>
+    
+    <div style="font:normal normal bold 40px Arial;text-align:center; padding-top: 5%">
+		<span style="text-decoration:none">^</span><span style="border:3px dashed red">LAB</span><span style="text-decoration:overline">Z</span> 
 
+	</div>
+	
 	<div id="t" style="display:none">
-	   <div style="display:table;position:relative;margin:auto;width:35%;height:15%;background:linear-gradient(white,#242424);margin-top:20%;opacity:0.6;text-align:center">
+	   <div style="display:table;position:relative;margin:auto;width:35%;height:15%;background:linear-gradient(white,#242424);margin-top:15%;opacity:0.6;text-align:center">
 	   		<div style="display:table-row;">
 	   			<div style="display:table-cell;padding-top:25px;"><input type="textbox" style="border-radius:5px;width:95%" placeholder="Username"></div>
 	   		</div>
