--- a/js/assignment/index.html
+++ b/js/assignment/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title> Demo Page</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		
+		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<script src="./main.js"  type="text/javascript"> </script>
 	</head>	
     <body>
 
@@ -21,7 +23,7 @@
     			</div>
     			<div class="col_right" style="padding-left:3%;padding-right:2%"><br>
     				<span style="font-size:1.6vmin;">Already have an ID or e-mail address?</span><br>
-    				<input type="submit" value="Sign In" class="btnlogin"/><br>
+    				<input type="submit" value="Sign In" class="btnlogin" onclick="boo()"/><br>
     				<span style="color:blue;font-size:1.6vmin;">Forgot your password or Yahoo ID ?</span> 
     			</div>
     		</div>
@@ -134,8 +136,8 @@
  					 	 	<div class="Rfield">
  					 	 		<input type="password" style="width:20vh" id="pwd" onchange="vStrength()">
 
- 					 	 		<div style="display:inline-block; position:relative;padding-left:10px;padding-top:-50px">
- 					 	 			<div style="display:table;">
+ 					 	 		<div style="display:inline-block; position:relative;padding-left:10px;padding-top:-50px" onclick="pwdrules()">
+ 					 	 			<div style="display:table;" >
 	 					 	 			<div style="display:table-row; ">
 	 					 	 				<div style="table-cell;font-size:10px;">Password Strength</div>
 	 					 	 			</div>
@@ -155,6 +157,7 @@
  						 	 			</div>
  									</div>
  					 	 		</div>
+ 									<span id="pwderror">err</span>
 
  					 	 	</div>
 						 </div>
@@ -162,8 +165,8 @@
 						 <div class="wraprow">
  					 	 	<div class="Lfield">Re-type Password</div>
  					 	 	<div class="Rfield">
- 					 	 		<input type="password" style="width:20vh" onchange="vpwd">
- 					 	 		<span id="vpwd" style="padding-left:1vw">hhdf</span>
+ 					 	 		<input type="password" style="width:20vh" id="rpwd" onchange="vpwd()">
+ 					 	 		<span id="vpwd" style="padding-left:1vw">err</span>
  					 	 	</div>
 						 </div>					 
 					</div>
@@ -259,6 +262,8 @@
     		</div>
 		
 		</div>
+
+
     </body>
 
 </html>
