--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,7 @@
         <title>Holiday Homes</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.css">  
+        <link rel="stylesheet" type="text/css" href="css/datepicker.css">
 
         <link rel="stylesheet" type="text/css" href="css/style.css">    
         
@@ -12,11 +13,13 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
         <script type="text/javascript" src="js/ng/app.js"></script> 
-
+        <script type="text/javascript" src="js/ng/controllers.js"></script>
         <script type="text/javascript" src="js/script.js"></script>     
+        <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
+        <script src="js/jquery.tagcanvas.min.js" type="text/javascript"></script>
 
     </head>
-    <body ng-controller="hController as hc">
+    <body>
         <ng-header></ng-header>
 
         <ng-view></ng-view> 
