--- a/project/js/ng/directives/ng-footer.html
+++ b/project/js/ng/directives/ng-footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
-   <div class="container" style="width:90%;height:30px;">
-     <div id="myfCarousel" class="carousel" style="width:100%;height:20px;">
+   <div  style="width:90%;height:40px;float:none;margin:auto">
+     <div id="myfCarousel" class="carousel" style="width:100%;height:40px;">
           <!-- Carousel items -->
          <div class="carousel-inner" >
               <div class="active item" >
@@ -52,10 +52,12 @@
 
 
           </div>  
-                <a class="carousel-control left" href="#myfCarousel" data-slide="prev">&lsaquo;</a>
-              <a class="carousel-control right" href="#myfCarousel" data-slide="next">&rsaquo;</a>
+<!--                 <a class="carousel-control left" href="#myfCarousel" data-slide="prev">&lsaquo;</a>
+              <a class="carousel-control right" href="#myfCarousel" data-slide="next">&rsaquo;</a> -->
       </div>
   </div>
+
+
 </div>
 
 <script type="text/javascript">
