--- a/project/js/ng/directives/ng-header.html
+++ b/project/js/ng/directives/ng-header.html
@@ -1,4 +1,4 @@
-<nav role="navigation" class="navbar navbar-inverse">
+<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top" style="margin:0">
     <div class="navbar-header">
         <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
             <span class="icon-bar"></span>
@@ -8,20 +8,18 @@
         <a href="index.html" class="navbar-brand">HOME</a>
     </div>
     <div id="navbarCollapse" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="#/about">About</a></li>
-            <li><a href="#">Popular</a></li>
+        <div >
+            <a href="#/about" style="padding-right:10px">About</a>
+            <a href="#">Popular</a>
+        </div>
 
-        </ul>
+        <div  class="pull-right">
+            <a href="#" id="login" >Login</a>
+        </div> 
 
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" id="login">Login</a></li>
-
-        </ul>
-        <form role="search" class="navbar-form navbar-right">
-            
-                <div class="form-group">
-                    <div class="input-group">
+        <form role="search" class="pull-right" style="width:250px;padding-top:10px;">  
+                <div class="form-group" style="margin-bottom:1px">
+                    <div class="input-group" >
                         <input type="text" class="form-control typeahead" placeholder="Search" id="inputGroup"/>
                         <span class="input-group-addon">
                            <a href=""> <i class="glyphicon glyphicon-search"></i> </a>
